--- a/tournament-web-app/src/app/event/tournament.component.css
+++ b/tournament-web-app/src/app/event/tournament.component.css
@@ -13,3 +13,13 @@ mat-form-field{
 .evaluationref{
     display:block; 
 }
+.medalref{
+    display:block; 
+}
+.grade{
+    font-size: large;
+    margin-right: 1em;
+}
+.medal{
+    font-size: large;
+}
