--- a/tournament-web-app/src/app/medals-list/medals-list.component.html
+++ b/tournament-web-app/src/app/medals-list/medals-list.component.html
@@ -1,7 +1,7 @@
 <a [routerLink]="'/tournament/'+tournamentId">
     <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
 </a>
-<h1>Medals<button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button></h1>
+<h1>Medallas<button mat-button-icon (click)="onAdd()"><mat-icon>add</mat-icon></button></h1>
 @for(g of getGroups(); track g){
     <form [formGroup]="g">
          
