--- a/tournament-web-app/src/app/tournament/tournament.component.html
+++ b/tournament-web-app/src/app/tournament/tournament.component.html
@@ -59,14 +59,16 @@
 
                 
                     <mat-divider></mat-divider>
-                    <h2>Evaluaciones<a [routerLink]=" '/tournament/'+ id + '/evaluationNew' ">
-                        <button mat-button-icon color="primary"><mat-icon>add</mat-icon></button>
-                    </a></h2>
-                    @for( e of evaluationReferences; track e.id){
-                        <a class="evaluationref" [routerLink]=" '/tournament/'+ id + '/evaluation/' + e.id">
-                            <button mat-button>{{e.evaluation.label}}</button>
-                        </a>  
-                    }                
+                    <h2>Evaluaciones<a [routerLink]="['/','tournament',id,'evaluations']">
+                        <button mat-button-icon><mat-icon>edit</mat-icon></button>
+                    </a></h2>  
+                    @if(tournament){ 
+                        @for( e of tournament.evaluations; track e){
+                            <a class="medalref" [routerLink]="['/','tournament',id,'medals']">
+                                <button mat-button>{{e.label}}</button>
+                            </a>                      
+                        }               
+                    }             
         
                     
                     <mat-divider></mat-divider>
@@ -90,7 +92,7 @@
                             </a>                      
                         }               
                     }
-
+<!--
                     <mat-divider></mat-divider>
                     <h2>Registrados<a [routerLink]=" '/tournament/'+id+'/performanceNew/'">
                         <button mat-button-icon color="primary"><mat-icon>add</mat-icon></button>
@@ -170,7 +172,9 @@
                     @empty{
                         Por favor adicione performances al programa.
                     }
+                    -->
                 }    
+                              
             }  
             @else{
                 @if( tournament ){
@@ -178,12 +182,13 @@
                 <h2>Hora:{{tournament.eventTime}}</h2>                
                 }
             }
+
         </mat-card-content>   
         <mat-card-actions>
             @if( !id ){
                 <button mat-button-icon (click)="onSubmit()"><mat-icon>done</mat-icon></button>
             }
         </mat-card-actions>
-             
+           
     </mat-card>    
 </form>
