--- a/tournament-web-app/src/app/tournament/tournament.component.html
+++ b/tournament-web-app/src/app/tournament/tournament.component.html
@@ -64,7 +64,7 @@
                     </a></h2>  
                     @if(tournament){ 
                         @for( e of tournament.evaluations; track e){
-                            <a class="medalref" [routerLink]="['/','tournament',id,'medals']">
+                            <a class="medalref" [routerLink]="['/','tournament',id,'evaluations']">
                                 <button mat-button>{{e.label}}</button>
                             </a>                      
                         }               
@@ -72,14 +72,16 @@
         
                     
                     <mat-divider></mat-divider>
-                    <h2>Jurado<a [routerLink]=" '/tournament/'+ id + '/evaluatorNew' ">
-                        <button mat-button-icon color="primary"><mat-icon>add</mat-icon></button>
-                    </a></h2>
-                    @for( e of evaluatorReferences; track e.id){
-                        <a class="evaluationref" [routerLink]=" '/tournament/'+ id + '/evaluator/' + e.id">
-                            <button mat-button>{{e.evaluator.label}}</button>
-                        </a>  
-                    }                
+                    <h2>Jurado<a [routerLink]="['/','tournament',id,'jurors']">
+                        <button mat-button-icon><mat-icon>edit</mat-icon></button>
+                    </a></h2>  
+                    @if(tournament){ 
+                        @for( j of tournament.jurors; track j){
+                            <a class="medalref" [routerLink]="['/','tournament',id,'jurors']">
+                                <button mat-button>{{j.label}}</button>
+                            </a>                      
+                        }               
+                    }                 
         
                     <mat-divider></mat-divider>        
                     <h2>Premios<a [routerLink]="['/','tournament',id,'medals']">
@@ -92,6 +94,15 @@
                             </a>                      
                         }               
                     }
+                    <h2>Performances<a [routerLink]="['/','tournament',id,'performances']">
+                        <button mat-button-icon><mat-icon>edit</mat-icon></button>
+                    </a></h2> 
+                    <h2>Program<a [routerLink]="['/','tournament',id,'program']">
+                        <button mat-button-icon><mat-icon>edit</mat-icon></button>
+                    </a></h2>  
+                    <h2>Podium<a [routerLink]="['/','tournament',id,'podium']">
+                        <button mat-button-icon><mat-icon>emoji_events</mat-icon></button>
+                    </a></h2>                                                             
 <!--
                     <mat-divider></mat-divider>
                     <h2>Registrados<a [routerLink]=" '/tournament/'+id+'/performanceNew/'">
