--- a/tournament-web-app/src/app/evaluationgrade/evaluationgrade-component.html
+++ b/tournament-web-app/src/app/evaluationgrade/evaluationgrade-component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/','tournament',tournamentId]">
+<a [routerLink]="['/','tournament',tournamentId,'program']">
     <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
 </a>
 <h1>Calificacion</h1>
