--- a/tournament-web-app/src/app/performance-list/performance-list.component.html
+++ b/tournament-web-app/src/app/performance-list/performance-list.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/','tournament',id]">
+<a [routerLink]="['/','tournament',tournamentId]">
     <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
 </a>
 @if( tournament ){
