--- a/tournament-web-app/src/app/tournament/tournament.component.css
+++ b/tournament-web-app/src/app/tournament/tournament.component.css
@@ -17,6 +17,10 @@ mat-form-field{
 .medalref{
     display:block; 
 }
+.item{
+    display:block;
+    margin:1em;
+}
 .grade{
     font-size: large;
     margin-right: 1em;
